builder/tests/08-unrecognized-attribute.stderr
error: Unknown field: `eac`. Did you mean `each`?
  --> $DIR/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
